fix layout issue

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   text-align: center;
   background-color: black;
   opacity: 0.8;
-  font-size: 25px;
+  font-size: 20px;
   color: antiquewhite;
   padding-left: 20px;
   padding-right: 20px;
@@ -49,7 +49,7 @@ body {
   text-align: center;
   background-color: black;
   opacity: 0.8;
-  font-size: 25px;
+  font-size: 20px;
   color: antiquewhite;
   padding-left: 20px;
   padding-right: 20px;
@@ -66,7 +66,7 @@ body {
   text-align: center;
   background-color: black;
   opacity: 0.8;
-  font-size: 25px;
+  font-size: 20px;
   color: antiquewhite;
   padding-left: 20px;
   padding-right: 20px;
@@ -78,7 +78,7 @@ body {
   text-align: center;
   background-color: black;
   opacity: 0.8;
-  font-size: 25px;
+  font-size: 20px;
   color: antiquewhite;
   padding-left: 20px;
   padding-right: 20px;
